--- a/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_en.properties
+++ b/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_en.properties
@@ -1,8 +1,14 @@
-console.button.add=Add
+pragram.title=Urban Spork
+tray.tooltip=Urban Spork
+tray.exit=Exit
+tray.menu.console=Console
+console.tab0.text=Server Configuration
+console.tab1.text=Log
+console.button.add=Add...
 console.button.del=Delete
 console.button.copy=Copy
-console.button.moveUp=Up
-console.button.moveDown=Down
+console.button.up=Up
+console.button.down=Down
 console.button.confirm=Confirm
 console.button.cancel=Cancel
 console.label.host=Host
@@ -11,5 +17,4 @@ console.label.password=Password
 console.label.cipher=Cipher
 console.label.memo=Memo
 console.label.proxy.port=Proxy Port
-console.tab0.text=Server Configuration
-console.tab1.text=Log
+console.validator.required.field.message=Can't be blank
