--- a/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_zh_CN.properties
+++ b/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_zh_CN.properties
@@ -1,8 +1,14 @@
+pragram.title=Urban Spork
+tray.tooltip=Urban Spork
+tray.exit=\u9000\u51FA
+tray.menu.console=\u63A7\u5236\u53F0
+console.tab0.text=\u914D\u7F6E\u670D\u52A1\u5668
+console.tab1.text=\u67E5\u770B\u65E5\u5FD7
 console.button.add=\u65B0\u589E
 console.button.del=\u5220\u9664
 console.button.copy=\u590D\u5236
-console.button.moveUp=\u4E0A\u79FB
-console.button.moveDown=\u4E0B\u79FB
+console.button.up=\u4E0A\u79FB
+console.button.down=\u4E0B\u79FB
 console.button.confirm=\u786E\u8BA4
 console.button.cancel=\u53D6\u6D88
 console.label.host=\u5730\u5740
@@ -11,5 +17,4 @@ console.label.password=\u5BC6\u7801
 console.label.cipher=\u52A0\u5BC6
 console.label.memo=\u5907\u6CE8
 console.label.proxy.port=\u4EE3\u7406\u7AEF\u53E3
-console.tab0.text=\u914D\u7F6E\u670D\u52A1\u5668
-console.tab1.text=\u67E5\u770B\u65E5\u5FD7
+console.validator.required.field.message=\u5FC5\u8F93\u9879
