--- a/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_en.properties
+++ b/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_en.properties
@@ -2,6 +2,7 @@ pragram.title=Urban Spork
 tray.tooltip=Urban Spork
 tray.exit=Exit
 tray.menu.console=Console
+tray.menu.language=Language
 console.tab0.text=Server Configuration
 console.tab1.text=Log
 console.button.add=Add...
