--- a/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_en.properties
+++ b/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_en.properties
@@ -16,6 +16,6 @@ console.label.host=Host
 console.label.port=Port
 console.label.password=Password
 console.label.cipher=Cipher
-console.label.memo=Memo
+console.label.remark=Remark
 console.label.proxy.port=Proxy Port
 console.validator.required.field.message=Can't be blank
