--- a/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_zh.properties
+++ b/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_zh.properties
@@ -16,6 +16,6 @@ console.label.host=\u5730\u5740
 console.label.port=\u7AEF\u53E3
 console.label.password=\u5BC6\u7801
 console.label.cipher=\u52A0\u5BC6
-console.label.memo=\u5907\u6CE8
+console.label.remark=\u5907\u6CE8
 console.label.proxy.port=\u4EE3\u7406\u7AEF\u53E3
 console.validator.required.field.message=\u5FC5\u8F93\u9879
