--- a/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_en.properties
+++ b/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_en.properties
@@ -18,4 +18,4 @@ console.label.password=Password
 console.label.cipher=Cipher
 console.label.remark=Remark
 console.label.proxy.port=Proxy Port
-console.validator.required.field.message=Can't be blank
+console.validator.required.field.message=Can not be blank
