servers tray menu

--- a/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_en.properties
+++ b/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_en.properties
@@ -3,6 +3,7 @@ tray.tooltip=Urban Spork
 tray.exit=Exit
 tray.menu.console=Console
 tray.menu.language=Language
+tray.menu.servers=Servers
 console.tab0.text=Server Configuration
 console.tab1.text=Log
 console.button.add=Add...
