--- a/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_zh.properties
+++ b/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_zh.properties
@@ -3,6 +3,7 @@ tray.tooltip=Urban Spork
 tray.exit=\u9000\u51FA
 tray.menu.console=\u63A7\u5236\u53F0
 tray.menu.language=\u8BED\u8A00
+tray.menu.servers=\u670d\u52a1\u5668
 console.tab0.text=\u914D\u7F6E\u670D\u52A1\u5668
 console.tab1.text=\u67E5\u770B\u65E5\u5FD7
 console.button.add=\u65B0\u589E
