component start order

--- a/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_zh.properties
+++ b/urban-spork-client/src/com/urbanspork/client/mvc/i18n/language_zh.properties
@@ -1,4 +1,4 @@
-pragram.title=Urban Spork
+program.title=Urban Spork
 tray.tooltip=Urban Spork
 tray.exit=\u9000\u51FA
 tray.menu.console=\u63A7\u5236\u53F0
