Support vmess client

--- a/urban-spork-client-gui/src/com/urbanspork/client/gui/i18n/language_en.properties
+++ b/urban-spork-client-gui/src/com/urbanspork/client/gui/i18n/language_en.properties
@@ -17,6 +17,7 @@ console.label.host=Host
 console.label.port=Port
 console.label.password=Password
 console.label.cipher=Cipher
+console.label.protocol=Protocol
 console.label.remark=Remark
 console.label.proxy.port=Proxy Port
 console.validator.required.field.message=Can not be blank
