feat(ss): shadowsocks server configuration url

--- a/urban-spork-client-gui/src/com/urbanspork/client/gui/i18n/language_en.properties
+++ b/urban-spork-client-gui/src/com/urbanspork/client/gui/i18n/language_en.properties
@@ -6,7 +6,9 @@ tray.menu.language=Language
 tray.menu.servers=Servers
 console.tab0.text=Server Configuration
 console.tab1.text=Log
-console.button.add=Add...
+console.button.new=New
+console.button.import=Import...
+console.button.share=Share...
 console.button.del=Delete
 console.button.copy=Copy
 console.button.up=Up
