--- a/urban-spork-client-gui/src/com/urbanspork/client/gui/i18n/language_zh.properties
+++ b/urban-spork-client-gui/src/com/urbanspork/client/gui/i18n/language_zh.properties
@@ -3,10 +3,12 @@ tray.tooltip=Urban Spork
 tray.exit=\u9000\u51FA
 tray.menu.console=\u63A7\u5236\u53F0
 tray.menu.language=\u8BED\u8A00
-tray.menu.servers=\u670d\u52a1\u5668
+tray.menu.servers=\u670D\u52A1\u5668
 console.tab0.text=\u914D\u7F6E\u670D\u52A1\u5668
 console.tab1.text=\u67E5\u770B\u65E5\u5FD7
-console.button.add=\u65B0\u589E
+console.button.new=\u65B0\u5EFA
+console.button.import=\u5BFC\u5165
+console.button.share=\u5206\u4EAB
 console.button.del=\u5220\u9664
 console.button.copy=\u590D\u5236
 console.button.up=\u4E0A\u79FB
@@ -17,7 +19,7 @@ console.label.host=\u5730\u5740
 console.label.port=\u7AEF\u53E3
 console.label.password=\u5BC6\u7801
 console.label.cipher=\u52A0\u5BC6
-console.label.protocol=\u534f\u8bae
+console.label.protocol=\u534F\u8BAE
 console.label.remark=\u5907\u6CE8
 console.label.proxy.port=\u4EE3\u7406\u7AEF\u53E3
 console.validator.required.field.message=\u5FC5\u8F93\u9879
