feat(gui): add a network monitor

--- a/urban-spork-client-gui/resource/language_en.properties
+++ b/urban-spork-client-gui/resource/language_en.properties
@@ -6,6 +6,7 @@ tray.menu.language=Language
 tray.menu.servers=Servers
 console.tab0.text=Server Configuration
 console.tab1.text=Log
+console.tab2.text=Network
 console.button.new=New
 console.button.import=Import...
 console.button.share=Share...
