--- a/urban-spork-client-gui/resource/language_zh.properties
+++ b/urban-spork-client-gui/resource/language_zh.properties
@@ -6,6 +6,7 @@ tray.menu.language=\u8BED\u8A00
 tray.menu.servers=\u670D\u52A1\u5668
 console.tab0.text=\u914D\u7F6E\u670D\u52A1\u5668
 console.tab1.text=\u67E5\u770B\u65E5\u5FD7
+console.tab2.text=\u7F51\u7EDC\u8FDE\u63A5
 console.button.new=\u65B0\u5EFA
 console.button.import=\u5BFC\u5165
 console.button.share=\u5206\u4EAB
