feat(gui): channel traffic table

--- a/urban-spork-client-gui/resource/locales/console_en.properties
+++ b/urban-spork-client-gui/resource/locales/console_en.properties
@@ -24,3 +24,8 @@ console.label.protocol=Protocol
 console.label.remark=Remark
 console.label.proxy.port=Proxy Port
 console.validator.required.field.message=Cannot be blank
+channel.traffic.tableview.column.0.label=Host
+channel.traffic.tableview.column.1.label=Downloaded
+channel.traffic.tableview.column.2.label=Uploaded
+channel.traffic.tableview.column.3.label=DL Speed
+channel.traffic.tableview.column.4.label=UL Speed
