--- a/urban-spork-client-gui/resource/locales/console_zh.properties
+++ b/urban-spork-client-gui/resource/locales/console_zh.properties
@@ -24,3 +24,8 @@ console.label.protocol=\u534F\u8BAE
 console.label.remark=\u5907\u6CE8
 console.label.proxy.port=\u4EE3\u7406\u7AEF\u53E3
 console.validator.required.field.message=\u5FC5\u8F93\u9879
+channel.traffic.tableview.column.0.label=\u4E3B\u673A
+channel.traffic.tableview.column.1.label=\u4E0B\u8F7D\u91CF
+channel.traffic.tableview.column.2.label=\u4E0A\u4F20\u91CF
+channel.traffic.tableview.column.3.label=\u4E0B\u8F7D\u901F\u5EA6
+channel.traffic.tableview.column.4.label=\u4E0A\u4F20\u901F\u5EA6
